# crypto-trader-openenv

./: README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  environment.py  requirements.txt
