[project]
name = "crypto-trader-openenv"
version = "1.0.0"
description = "OpenEnv RL environment for crypto trading"
authors = [
    {name = "Anisha Singh", email = "anisha@example.com"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "websockets>=12.0"
]